# Offitrans

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  README_ZH.md  TODO.md  __init__.py  complex_test.xlsx  debug_excel.py  debug_filtering.py  debug_rich_text.py  deep_sample_analysis.py  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_complex_excel.py  test_full_translation.py  test_text_filtering.py  translation_cache.json  verify_translation.py
.claude/: settings.json
docs/: api.md  installation.md  quickstart.md  security.md
examples/: advanced_excel.py  basic_usage.py  batch_processing.py  example.py
examples/sample_files/: sample.docx  sample.pptx  sample.xlsx
excel_translate/: translate_excel.py
offitrans/: __init__.py  version.py
offitrans/cli/: __init__.py  main.py
offitrans/core/: __init__.py  base.py  cache.py  config.py  utils.py
offitrans/exceptions/: __init__.py  errors.py
offitrans/processors/: __init__.py  base.py  excel.py  pdf.py  powerpoint.py  word.py
offitrans/translators/: __init__.py  base_api.py  google.py
pdf_translate/: translate_pdf.py
ppt_translate/: translate_ppt.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_core.py  test_processors.py  test_translators.py
translate_tools/: base.py  cache.py  google_translate.py  test_cache.py  utils.py
word_translate/: docx_translate.py
